superstructure improved stress check calculations

--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -5,69 +5,25 @@
    "execution_count": 1,
    "id": "ba6ea02b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     Length  Height      Position     Area      Centroid  \\\n",
-      "Name                                                                       \n",
-      "left Pillar            0.60    3.20    [3.5, 3.5]  1.92000    [3.8, 5.1]   \n",
-      "right pillar           0.60    3.20    [6.5, 3.5]  1.92000    [6.8, 5.1]   \n",
-      "bottom slab            2.40    0.50    [4.1, 3.5]  1.20000   [5.3, 3.75]   \n",
-      "top slab               2.40    0.30    [4.1, 6.4]  0.72000   [5.3, 6.55]   \n",
-      "left cantilever        1.80    0.15   [1.7, 6.55]  0.27000  [2.6, 6.625]   \n",
-      "right cantilever       1.80    0.15   [7.1, 6.55]  0.27000  [8.0, 6.625]   \n",
-      "left triangle          1.80    0.30   [1.7, 6.25]  0.27000   [2.9, 6.45]   \n",
-      "right triangle         1.80    0.30   [7.1, 6.25]  0.27000   [7.7, 6.45]   \n",
-      "left top fillet        0.45    0.15   [4.1, 6.25]  0.03375  [4.25, 6.35]   \n",
-      "right top fillet       0.45    0.15  [6.05, 6.25]  0.03375  [6.35, 6.35]   \n",
-      "left bottom fillet     0.45    0.15    [4.1, 4.0]  0.03375  [4.25, 4.05]   \n",
-      "right bottom fillet    0.45    0.15   [6.05, 4.0]  0.03375  [6.35, 4.05]   \n",
-      "\n",
-      "                                    I                   Ah2 Object Type  \n",
-      "Name                                                                     \n",
-      "left Pillar          [1.6384, 0.0576]      [0.038679, 4.32]   rectangle  \n",
-      "right pillar         [1.6384, 0.0576]      [0.038679, 4.32]   rectangle  \n",
-      "bottom slab            [0.025, 0.576]       [2.671044, 0.0]   rectangle  \n",
-      "top slab             [0.0054, 0.3456]       [1.231945, 0.0]   rectangle  \n",
-      "left cantilever      [0.0005, 0.0729]    [0.516475, 1.9683]   rectangle  \n",
-      "right cantilever     [0.0005, 0.0729]    [0.516475, 1.9683]   rectangle  \n",
-      "left triangle        [0.0013, 0.0486]    [0.394044, 1.5552]  triangle_1  \n",
-      "right triangle       [0.0013, 0.0486]    [0.394044, 1.5552]  triangle_3  \n",
-      "left top fillet         [0.0, 0.0004]  [0.041439, 0.037209]  triangle_3  \n",
-      "right top fillet        [0.0, 0.0004]  [0.041439, 0.037209]  triangle_1  \n",
-      "left bottom fillet      [0.0, 0.0004]  [0.047949, 0.037209]  triangle_2  \n",
-      "right bottom fillet     [0.0, 0.0004]  [0.047949, 0.037209]  triangle_4  \n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'span' from 'bridge_specs' (C:\\Users\\bisha\\PycharmProjects\\PSC_bridge\\bridge_specs.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16840/438088493.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mCross\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCross_section\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcables\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpansion_calc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mbridge_specs\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbox\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mallinput\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmain_input\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'span' from 'bridge_specs' (C:\\Users\\bisha\\PycharmProjects\\PSC_bridge\\bridge_specs.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from Cross import Cross_section,cables, expansion_calc\n",
     "from bridge_specs import box\n",
-    "from allinput import main_input"
+    "from allinput import main_input\n",
+    "import irc6_2007 as irc6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1bbea425",
    "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.read_excel('data/span.xlsx',index_col=None,header=None)\n",
+    "fck = 35 #input grade of concrete\n",
     "span = int(df.iloc[2])\n",
     "no = int(df.iloc[1])\n",
     "sc=[(j)/(no-1)*50 for j in range(no)]"
@@ -104,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad0223ce",
    "metadata": {},
    "outputs": [],
@@ -132,7 +88,8 @@
     "\n",
     "\n",
     "section=Cross_section(length,height)\n",
-    "cable = cables(35,14,section)"
+    "cable_no = 14 #input no of cables\n",
+    "cable = cables(fck,cable_no,section)"
    ]
   },
   {
@@ -145,12 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f018f8bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "sections = []\n",
     "for i in range(no):  \n",
     "    section1=Cross_section(length,height)\n",
@@ -169,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d8dfa7ee",
    "metadata": {},
    "outputs": [],
@@ -180,8 +136,118 @@
     "bm_sidl = list(df['Surface Loads'])\n",
     "bm_pedl = list(df['Pedestrian Load'])\n",
     "\n",
-    "df1 = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1]) #live load\n",
-    "bm_ll = df1.loc['MaxBM'].max().to_list()"
+    "dfl = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1]) #live load"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3cd03e4",
+   "metadata": {},
+   "source": [
+    "**live load calculation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1aedefa",
+   "metadata": {},
+   "source": [
+    "Impact factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7118d2f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicles = [irc6.ll_A, irc6.ll_70R, irc6.ll_70RT]\n",
+    "IF = [irc6.impact(i.name, span) for i in vehicles]\n",
+    "arr_if = np.array(IF)\n",
+    "arr_with_if = np.array(IF)+1 #including impact factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "311de524",
+   "metadata": {},
+   "source": [
+    "distribution factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e7f3d9cb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.067, 0.5, 0.635, 0.617]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfe = pd.read_excel('outputs/max_e.xlsx', index_col=0)\n",
+    "\n",
+    "ecc = dfe['MaxEccentricity'] #eccentricity\n",
+    "\n",
+    "def df(ecc, webcc):\n",
+    "    df = (webcc/2+ecc)/webcc\n",
+    "    return round(df, 3)\n",
+    "\n",
+    "webcc = 3 #input web center/center distance\n",
+    "distf = [df(i, webcc) for i in ecc]\n",
+    "distf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cfe311d",
+   "metadata": {},
+   "source": [
+    "bm for ll combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9ba4d4c3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0.      , 3334.204152, 5665.872336, 7034.868328, 7514.978112,\n",
+       "       7021.568888, 5564.1748  , 3186.321288,    0.      ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_maxbm = dfl.loc['MaxBM'].to_numpy() # max bm due to each veh\n",
+    "arr_maxbmif = arr_maxbm*arr_with_if[:, np.newaxis] # max bm including impact due to ll\n",
+    "\n",
+    "arr_ll_comb = dfe.drop(columns='MaxEccentricity').to_numpy() # ll combinations in array\n",
+    "\n",
+    "all_ll = arr_ll_comb.dot(arr_maxbmif) # ll with impact for each combination\n",
+    "all_unfactored_ll = all_ll*np.array(distf)[:, np.newaxis] # distributed bm due to live load including impact (bm*if*df)\n",
+    "\n",
+    "bm_ll = np.amax(all_unfactored_ll, axis=0)\n",
+    "bm_ll"
    ]
   },
   {
@@ -194,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "52aaf253",
    "metadata": {},
    "outputs": [],
@@ -223,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9eff7697",
    "metadata": {},
    "outputs": [],
@@ -231,7 +297,7 @@
     "def eccentricity(cable_positions, centroid):\n",
     "    cable_areaxpos_sum = 0\n",
     "    for i in cable_positions:\n",
-    "        cable_areaxpos_sum+=(centroid-i[1])\n",
+    "        cable_areaxpos_sum+=(i[1]-centroid)\n",
     "    return cable_areaxpos_sum/len(cable_positions)"
    ]
   },
@@ -245,35 +311,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "06f9f8f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_sections = sections #dummy\n",
-    "prestressing_force_full = 3400 #dummy\n",
-    "prestressing_force_withloss = 0.75*prestressing_force_full"
+    "list_of_sections = sections\n",
+    "prestressing_force = 2730 #input\n",
+    "prestressing_force_total = prestressing_force*cable_no\n",
+    "# prestressing_force_withloss = 0.75*prestressing_force"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ff3adecf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def tau(section, bm):\n",
     "    tau_top = bm*section.ymin/section.I[0]\n",
-    "    tau_bot = bm*section.ymax/section.I[0]\n",
+    "    tau_bot = -bm*section.ymax/section.I[0]\n",
     "    return (tau_top, tau_bot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7583dd97",
-   "metadata": {},
-   "source": [
-    "**Case 1: Rare combination**"
    ]
   },
   {
@@ -286,23 +345,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21783053",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 13,
+   "id": "3040c834",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "bm_pre = [prestressing_force_full*eccentricity(i.cableprop, i.Centroid[1]) for i in list_of_sections]\n",
+    "#due to eccentricity\n",
+    "bm_pre = [prestressing_force_total*eccentricity(i.cableprop, i.Centroid[1]) for i in list_of_sections] #bm due to full prestressing force\n",
     "\n",
-    "list_tau_pre = [tau(list_of_sections[index], bm_pre[index]) for index in range(len(list_of_sections))]\n",
+    "list_tau_pre = [tau(list_of_sections[index], bm_pre[index]) for index in range(len(list_of_sections))] #stress due to full prestressing force\n",
     "\n",
-    "# for index, i in enumerate(list_of_sections):\n",
-    "#     list_tau_pre.append(tau(i, bm_pre[index]))\n",
-    "    \n",
-    "# list_tau_ax = [prestressing_force_full/sum(i.section_area) for i in list_of_sections]\n",
+    "#axial\n",
+    "list_tau_ax = [prestressing_force_total/sum(i.section_area) for i in list_of_sections]\n",
     "\n",
     "list_tau_preTotal = [(list_tau_pre[index][0] + list_tau_ax[index], list_tau_pre[index][1] + list_tau_ax[index]) for index in range(len(list_of_sections))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5f290f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2698.9277713847255, 9433.945640801687),\n",
+       " (2144.793996825409, 10591.4480723289),\n",
+       " (1748.9841578544688, 11418.235523419768),\n",
+       " (1511.4982544719041, 11914.307994074286),\n",
+       " (1432.3362866777165, 12079.66548429246),\n",
+       " (1511.4982544719041, 11914.307994074286),\n",
+       " (1748.9841578544683, 11418.235523419768),\n",
+       " (2144.793996825409, 10591.4480723289),\n",
+       " (2698.9277713847255, 9433.945640801687)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_tau_preTotal"
    ]
   },
   {
@@ -315,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6d14e7e4",
    "metadata": {},
    "outputs": [],
@@ -333,12 +418,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6ff56d9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "list_tau_sidl = [tau(list_of_sections[index], bm_sidl[index]) for index in range(len(list_of_sections))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c96efd8",
+   "metadata": {},
+   "source": [
+    "stress due to other load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6a6adcb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_tau_ODL = [tau(list_of_sections[index], bm_odl[index]) for index in range(len(list_of_sections))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe337f7",
+   "metadata": {},
+   "source": [
+    "stress due to live load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "908723be",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.0, -0.0),\n",
+       " (257.81896136739647, -538.5451823684815),\n",
+       " (438.11634030614226, -915.1593937753739),\n",
+       " (543.9746227277067, -1136.281485453868),\n",
+       " (581.099345813111, -1213.8294697385365),\n",
+       " (542.9462370466705, -1134.1333418448746),\n",
+       " (430.25252876076473, -898.7330696588099),\n",
+       " (246.38384682060257, -514.6589413552308),\n",
+       " (0.0, -0.0)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tau(list_of_sections[index], bm_ll[index]) for index in range(len(list_of_sections))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7583dd97",
+   "metadata": {},
+   "source": [
+    "**Case 1: Rare combination**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09977741",
+   "metadata": {},
+   "source": [
+    "prestressing stress with 10% loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73d0c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm_pre_10 = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21783053",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# for index, i in enumerate(list_of_sections):\n",
+    "#     list_tau_pre.append(tau(i, bm_pre[index]))\n",
+    "\n",
+    "list_tau_ax = [prestressing_force_full/sum(i.section_area) for i in list_of_sections]\n",
+    "\n",
+    "list_tau_preTotal = [(list_tau_pre[index][0] + list_tau_ax[index], list_tau_pre[index][1] + list_tau_ax[index]) for index in range(len(list_of_sections))]"
    ]
   },
   {
@@ -414,44 +599,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c96efd8",
-   "metadata": {},
-   "source": [
-    "stress due to other load"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6adcb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_tau_ODL = [tau(list_of_sections[index], bm_odl[index]) for index in range(len(list_of_sections))]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7fe337f7",
-   "metadata": {},
-   "source": [
-    "stress due to live load"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "908723be",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "list_tau_LL = [tau(list_of_sections[index], bm_ll[index]) for index in range(len(list_of_sections))]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f8246e58",
    "metadata": {},
    "source": [
@@ -507,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
