pm curve attempt 1

--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -123,31 +123,7 @@
    "execution_count": 5,
    "id": "412cbfca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0.3, 1.15],\n",
-       " [0.3, 1.6],\n",
-       " [0.3, 2.05],\n",
-       " [3.3, 1.15],\n",
-       " [3.3, 1.6],\n",
-       " [3.3, 2.05],\n",
-       " [0.3, 0.25],\n",
-       " [0.9, 0.25],\n",
-       " [1.5, 0.25],\n",
-       " [2.1, 0.25],\n",
-       " [2.7, 0.25],\n",
-       " [3.3, 0.25],\n",
-       " [0.3, 0.7],\n",
-       " [3.3, 0.7]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# endsec = sections[0]\n",
     "# endsec.cable_prop\n",
@@ -166,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d8dfa7ee",
    "metadata": {},
    "outputs": [],
@@ -174,10 +150,10 @@
     "df = pd.read_excel('outputs/Moments.xlsx', index_col=0)\n",
     "\n",
     "#bm multipied by distribution factor\n",
-    "bm_pdl = np.array(df['Dead Load'])*0.5\n",
-    "bm_odl = np.array(df['Other Loads'])*0.5\n",
-    "bm_surf = np.array(df['Surface Loads'])*0.5\n",
-    "bm_pedl = np.array(df['Pedestrian Load'])*0.5\n",
+    "bm_pdl = np.array(df['Dead Load'])\n",
+    "bm_odl = np.array(df['Other Loads'])\n",
+    "bm_surf = np.array(df['Surface Loads'])\n",
+    "bm_pedl = np.array(df['Pedestrian Load'])\n",
     "\n",
     "dfl = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1]) #live load"
    ]
@@ -200,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7118d2f0",
    "metadata": {},
    "outputs": [],
@@ -221,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e7f3d9cb",
    "metadata": {
     "scrolled": true
@@ -233,7 +209,7 @@
        "[1.067, 0.5, 0.635, 0.617]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "9ba4d4c3",
    "metadata": {
     "scrolled": true
@@ -271,11 +247,12 @@
     {
      "data": {
       "text/plain": [
-       "array([   0.      , 3334.204152, 5665.872336, 7034.868328, 7514.978112,\n",
-       "       7021.568888, 5564.1748  , 3186.321288,    0.      ])"
+       "array([    0.      ,  5250.7152  ,  8922.6336  , 11142.723712,\n",
+       "       12024.9024  , 11619.922688,  9417.0208  ,  5428.332288,\n",
+       "           0.      ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +264,8 @@
     "arr_ll_comb = dfe.drop(columns='MaxEccentricity').to_numpy() # ll combinations in array\n",
     "\n",
     "all_ll = arr_ll_comb.dot(arr_maxbmif) # ll with impact for each combination\n",
-    "all_unfactored_ll = all_ll*np.array(distf)[:, np.newaxis] # distributed bm due to live load including impact (bm*if*df)\n",
+    "all_unfactored_ll = all_ll #without dist factor\n",
+    "# all_unfactored_ll = all_ll*np.array(distf)[:, np.newaxis] # distributed bm due to live load including impact (bm*if*df)\n",
     "\n",
     "bm_ll = np.amax(all_unfactored_ll, axis=0)\n",
     "bm_ll"
@@ -303,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "52aaf253",
    "metadata": {},
    "outputs": [],
@@ -332,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "9eff7697",
    "metadata": {},
    "outputs": [],
@@ -354,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "06f9f8f0",
    "metadata": {},
    "outputs": [],
@@ -367,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ff3adecf",
    "metadata": {},
    "outputs": [],
@@ -388,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "3040c834",
    "metadata": {},
    "outputs": [],
@@ -406,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "5f290f84",
    "metadata": {
     "scrolled": true
@@ -426,7 +404,7 @@
        " (2698.9277713847255, 9433.945640801687)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "6d14e7e4",
    "metadata": {},
    "outputs": [],
@@ -455,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "c05e5f75",
    "metadata": {},
    "outputs": [
@@ -463,17 +441,17 @@
      "data": {
       "text/plain": [
        "[(0.0, -0.0),\n",
-       " (1035.1156746325378, -2162.2015572899177),\n",
-       " (1774.4840136557784, -3706.631241068429),\n",
-       " (2218.105017069723, -4633.289051335537),\n",
-       " (2365.978684874371, -4942.174988091239),\n",
-       " (2218.105017069723, -4633.289051335537),\n",
-       " (1774.4840136557784, -3706.631241068429),\n",
-       " (1035.1156746325378, -2162.2015572899177),\n",
+       " (2070.2313492650756, -4324.403114579835),\n",
+       " (3548.968027311557, -7413.262482136858),\n",
+       " (4436.210034139446, -9266.578102671074),\n",
+       " (4731.957369748742, -9884.349976182479),\n",
+       " (4436.210034139446, -9266.578102671074),\n",
+       " (3548.968027311557, -7413.262482136858),\n",
+       " (2070.2313492650756, -4324.403114579835),\n",
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "6ff56d9b",
    "metadata": {},
    "outputs": [],
@@ -502,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "0b9d1614",
    "metadata": {},
    "outputs": [
@@ -510,17 +488,17 @@
      "data": {
       "text/plain": [
        "[(0.0, -0.0),\n",
-       " (45.353210715420246, -94.73606210416182),\n",
-       " (77.74836122643471, -162.4046778928488),\n",
-       " (97.18545153304339, -203.00584736606103),\n",
-       " (103.66448163524628, -216.53957052379843),\n",
-       " (97.18545153304339, -203.00584736606103),\n",
-       " (77.74836122643471, -162.4046778928488),\n",
-       " (45.353210715420246, -94.73606210416182),\n",
+       " (90.70642143084049, -189.47212420832363),\n",
+       " (155.49672245286942, -324.8093557856976),\n",
+       " (194.37090306608678, -406.01169473212207),\n",
+       " (207.32896327049255, -433.07914104759686),\n",
+       " (194.37090306608678, -406.01169473212207),\n",
+       " (155.49672245286942, -324.8093557856976),\n",
+       " (90.70642143084049, -189.47212420832363),\n",
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "6a6adcb8",
    "metadata": {},
    "outputs": [],
@@ -549,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "cd0a708e",
    "metadata": {},
    "outputs": [
@@ -557,17 +535,17 @@
      "data": {
       "text/plain": [
        "[(0.0, -0.0),\n",
-       " (68.71698593245492, -143.53948803660882),\n",
-       " (117.80054731277986, -246.06769377704364),\n",
-       " (147.2506841409748, -307.58461722130454),\n",
-       " (157.06739641703982, -328.09025836939156),\n",
-       " (147.2506841409748, -307.58461722130454),\n",
-       " (117.80054731277986, -246.06769377704364),\n",
-       " (68.71698593245492, -143.53948803660882),\n",
+       " (137.43397186490984, -287.07897607321763),\n",
+       " (235.6010946255597, -492.1353875540873),\n",
+       " (294.5013682819496, -615.1692344426091),\n",
+       " (314.13479283407963, -656.1805167387831),\n",
+       " (294.5013682819496, -615.1692344426091),\n",
+       " (235.6010946255597, -492.1353875540873),\n",
+       " (137.43397186490984, -287.07897607321763),\n",
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "908723be",
    "metadata": {
     "scrolled": true
@@ -598,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "07571fa6",
    "metadata": {},
    "outputs": [],
@@ -638,22 +616,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "c73d0c6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2429.03499425, 2965.43027178, 3348.56975572, 3578.45344609,\n",
-       "        3655.08134288, 3578.45344609, 3348.56975572, 2965.43027178,\n",
+       "(array([2429.03499425, 4000.54594641, 5123.05376938, 5796.55846316,\n",
+       "        6021.06002776, 5796.55846316, 5123.05376938, 4000.54594641,\n",
        "        2429.03499425]),\n",
-       " array([8490.55107672, 7370.10170781, 6569.78073001, 6089.58814333,\n",
-       "        5929.52394777, 6089.58814333, 6569.78073001, 7370.10170781,\n",
+       " array([8490.55107672, 5207.90015052, 2863.14948894, 1456.299092  ,\n",
+       "         987.34895968, 1456.299092  , 2863.14948894, 5207.90015052,\n",
        "        8490.55107672]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "c2122404",
    "metadata": {},
    "outputs": [
@@ -688,7 +666,7 @@
        "(-2771, 16800)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "9679c1a7",
    "metadata": {},
    "outputs": [
@@ -753,22 +731,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "bb1d809b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2024.19582854, 2960.21623207, 3625.90796806, 4023.58290095,\n",
-       "        4157.52018362, 4022.81161169, 3620.0101094 , 2951.63989616,\n",
+       "(array([2024.19582854, 4229.61910876, 5800.36355173, 6743.79258401,\n",
+       "        7066.51271338, 6771.46731659, 5829.03510016, 4239.91985469,\n",
        "        2024.19582854]),\n",
-       " array([7075.4592306 , 5120.25284762, 3729.72254892, 2899.03919607,\n",
-       "        2619.26427983, 2900.65030378, 3742.042292  , 5138.16752838,\n",
-       "        7075.4592306 ]))"
+       " array([ 7075.4592306 ,  2468.66042749,  -812.38937585, -2783.07127429,\n",
+       "        -3457.18527276, -2840.87964426,  -872.27994478,  2447.14371256,\n",
+       "         7075.4592306 ]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "e3454b2c",
    "metadata": {},
    "outputs": [
@@ -803,7 +781,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "652cf4a8",
    "metadata": {
     "scrolled": true
@@ -870,22 +848,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "0463f6b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2024.19582854, 3024.67097241, 3735.43705314, 4159.57655663,\n",
-       "        4302.79502008, 4158.54817095, 3727.57324159, 3013.23585786,\n",
+       "(array([2024.19582854, 4331.12263686, 5972.85029988, 6959.19671969,\n",
+       "        7298.97057334, 6996.09636313, 6011.07903112, 4344.85696477,\n",
        "        2024.19582854]),\n",
-       " array([7075.4592306 , 4985.61655203, 3500.93270047, 2614.96882471,\n",
-       "        2315.80691239, 2617.11696831, 3517.35902459, 5009.50279304,\n",
-       "        7075.4592306 ]))"
+       " array([ 7075.4592306 ,  2256.63476514, -1172.68834978, -3233.01824064,\n",
+       "        -3942.75491402, -3310.09606727, -1252.54244168,  2227.94581189,\n",
+       "         7075.4592306 ]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "7b6c5c63",
    "metadata": {},
    "outputs": [
@@ -920,7 +898,7 @@
        "(-2771, 16100)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "1a53c824",
    "metadata": {},
    "outputs": [
@@ -985,22 +963,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "3d98172d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2024.19582854, 2960.21623207, 3625.90796806, 4023.58290095,\n",
-       "        4157.52018362, 4022.81161169, 3620.0101094 , 2951.63989616,\n",
+       "(array([2024.19582854, 4229.61910876, 5800.36355173, 6743.79258401,\n",
+       "        7066.51271338, 6771.46731659, 5829.03510016, 4239.91985469,\n",
        "        2024.19582854]),\n",
-       " array([7075.4592306 , 5120.25284762, 3729.72254892, 2899.03919607,\n",
-       "        2619.26427983, 2900.65030378, 3742.042292  , 5138.16752838,\n",
-       "        7075.4592306 ]))"
+       " array([ 7075.4592306 ,  2468.66042749,  -812.38937585, -2783.07127429,\n",
+       "        -3457.18527276, -2840.87964426,  -872.27994478,  2447.14371256,\n",
+       "         7075.4592306 ]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "9f7f65da",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1013,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "8656e048",
    "metadata": {},
    "outputs": [
@@ -1100,22 +1078,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "dae524c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2024.19582854, 2712.42815818, 3204.02267936, 3498.97939206,\n",
-       "        3597.2982963 , 3498.97939206, 3204.02267936, 2712.42815818,\n",
+       "(array([2024.19582854, 3816.26081875, 5096.30724033, 5864.33509328,\n",
+       "        6120.34437759, 5864.33509328, 5096.30724033, 3816.26081875,\n",
        "        2024.19582854]),\n",
-       " array([7075.4592306 , 5637.84500892, 4610.97770772, 3994.857327  ,\n",
-       "        3789.48386676, 3994.857327  , 4610.97770772, 5637.84500892,\n",
-       "        7075.4592306 ]))"
+       " array([ 7075.4592306 ,  3332.10396359,   658.27877287,  -946.01634156,\n",
+       "        -1480.7813797 ,  -946.01634156,   658.27877287,  3332.10396359,\n",
+       "         7075.4592306 ]))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "e559099d",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1128,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "8f6c8d3f",
    "metadata": {},
    "outputs": [
@@ -1196,14 +1174,6 @@
     "else:\n",
     "    print('bottom not ok')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d0d71d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
