--- a/Pier Forces.ipynb
+++ b/Pier Forces.ipynb
@@ -111,7 +111,7 @@
    ],
    "source": [
     "\"\"\"Substitute values of I and L from pier cap in 1 and pier stem in 2\"\"\"\n",
-    "#along=sag(T(sumlong,(K(40,I1,L1)+K(40,I2,L2))))*0.36*RR(\"long\")*1.2\n",
+    "along=sag(T(sumlong,(K(40,I1,L1)+K(40,I2,L2))))*0.36*RR(\"long\")*1.2\n",
     "#atrans=sag(T(sumtrans,(K(40,I1,L1)+K(40,I2,L2))))*0.36*RR(\"trans\")*1.2\n",
     "#avert=along*2/3"
    ]
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.1"
   },
   "pycharm": {
    "stem_cell": {
