--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": 2,
    "id": "b1c4bd7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "# from allinput import main_input\n",
+    "# import matplotlib.pyplot as plt\n",
+    "from allinput import main_input\n",
     "from irc6_2007 import *\n",
     "\n",
     "from reaction import find_bm, find_sf, find_ra, find_rb\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": 3,
    "id": "e36334be",
    "metadata": {
     "pycharm": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": 5,
    "id": "7021ab02",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": 6,
    "id": "70aec980",
    "metadata": {},
    "outputs": [],
@@ -191,20 +191,237 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": 26,
    "id": "3ec70ad1",
    "metadata": {},
    "outputs": [
     {
-
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>0.00</th>\n",
+       "      <th>6.25</th>\n",
+       "      <th>12.50</th>\n",
+       "      <th>18.75</th>\n",
+       "      <th>25.00</th>\n",
+       "      <th>31.25</th>\n",
+       "      <th>37.50</th>\n",
+       "      <th>43.75</th>\n",
+       "      <th>50.00</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">MaxBM</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2361.037</td>\n",
+       "      <td>4068.075</td>\n",
+       "      <td>5120.737</td>\n",
+       "      <td>5526.150</td>\n",
+       "      <td>5340.038</td>\n",
+       "      <td>4327.675</td>\n",
+       "      <td>2494.638</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RW</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4826.025</td>\n",
+       "      <td>8200.950</td>\n",
+       "      <td>10182.475</td>\n",
+       "      <td>10877.400</td>\n",
+       "      <td>10163.225</td>\n",
+       "      <td>8053.750</td>\n",
+       "      <td>4611.975</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RT</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3651.438</td>\n",
+       "      <td>6259.675</td>\n",
+       "      <td>7823.212</td>\n",
+       "      <td>8342.050</td>\n",
+       "      <td>7823.588</td>\n",
+       "      <td>6260.425</td>\n",
+       "      <td>3652.563</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">MaxSF+</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <td>445.318</td>\n",
+       "      <td>376.622</td>\n",
+       "      <td>307.926</td>\n",
+       "      <td>238.122</td>\n",
+       "      <td>169.426</td>\n",
+       "      <td>99.676</td>\n",
+       "      <td>43.520</td>\n",
+       "      <td>13.056</td>\n",
+       "      <td>-0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RW</th>\n",
+       "      <td>895.524</td>\n",
+       "      <td>771.524</td>\n",
+       "      <td>647.524</td>\n",
+       "      <td>521.524</td>\n",
+       "      <td>397.524</td>\n",
+       "      <td>271.524</td>\n",
+       "      <td>148.964</td>\n",
+       "      <td>44.948</td>\n",
+       "      <td>-0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RT</th>\n",
+       "      <td>667.590</td>\n",
+       "      <td>579.390</td>\n",
+       "      <td>492.590</td>\n",
+       "      <td>404.390</td>\n",
+       "      <td>317.590</td>\n",
+       "      <td>229.390</td>\n",
+       "      <td>142.590</td>\n",
+       "      <td>54.390</td>\n",
+       "      <td>-0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">MaxSF-</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-12.030</td>\n",
+       "      <td>-51.234</td>\n",
+       "      <td>-106.602</td>\n",
+       "      <td>-175.162</td>\n",
+       "      <td>-244.966</td>\n",
+       "      <td>-313.662</td>\n",
+       "      <td>-383.466</td>\n",
+       "      <td>-452.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RW</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-17.024</td>\n",
+       "      <td>-87.536</td>\n",
+       "      <td>-208.476</td>\n",
+       "      <td>-332.476</td>\n",
+       "      <td>-458.476</td>\n",
+       "      <td>-582.476</td>\n",
+       "      <td>-708.476</td>\n",
+       "      <td>-832.476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RT</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-54.810</td>\n",
+       "      <td>-143.010</td>\n",
+       "      <td>-229.810</td>\n",
+       "      <td>-316.610</td>\n",
+       "      <td>-404.810</td>\n",
+       "      <td>-491.610</td>\n",
+       "      <td>-579.810</td>\n",
+       "      <td>-666.610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">MaxSF</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <td>445.318</td>\n",
+       "      <td>376.622</td>\n",
+       "      <td>307.926</td>\n",
+       "      <td>238.122</td>\n",
+       "      <td>175.162</td>\n",
+       "      <td>244.966</td>\n",
+       "      <td>313.662</td>\n",
+       "      <td>383.466</td>\n",
+       "      <td>452.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RW</th>\n",
+       "      <td>895.524</td>\n",
+       "      <td>771.524</td>\n",
+       "      <td>647.524</td>\n",
+       "      <td>521.524</td>\n",
+       "      <td>397.524</td>\n",
+       "      <td>458.476</td>\n",
+       "      <td>582.476</td>\n",
+       "      <td>708.476</td>\n",
+       "      <td>832.476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class70RT</th>\n",
+       "      <td>667.590</td>\n",
+       "      <td>579.390</td>\n",
+       "      <td>492.590</td>\n",
+       "      <td>404.390</td>\n",
+       "      <td>317.590</td>\n",
+       "      <td>404.810</td>\n",
+       "      <td>491.610</td>\n",
+       "      <td>579.810</td>\n",
+       "      <td>666.610</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0.00      6.25      12.50      18.75      25.00  \\\n",
+       "MaxBM  ClassA       0.000  2361.037  4068.075   5120.737   5526.150   \n",
+       "       Class70RW    0.000  4826.025  8200.950  10182.475  10877.400   \n",
+       "       Class70RT    0.000  3651.438  6259.675   7823.212   8342.050   \n",
+       "MaxSF+ ClassA     445.318   376.622   307.926    238.122    169.426   \n",
+       "       Class70RW  895.524   771.524   647.524    521.524    397.524   \n",
+       "       Class70RT  667.590   579.390   492.590    404.390    317.590   \n",
+       "MaxSF- ClassA       0.000   -12.030   -51.234   -106.602   -175.162   \n",
+       "       Class70RW    0.000   -17.024   -87.536   -208.476   -332.476   \n",
+       "       Class70RT    0.000   -54.810  -143.010   -229.810   -316.610   \n",
+       "MaxSF  ClassA     445.318   376.622   307.926    238.122    175.162   \n",
+       "       Class70RW  895.524   771.524   647.524    521.524    397.524   \n",
+       "       Class70RT  667.590   579.390   492.590    404.390    317.590   \n",
+       "\n",
+       "                      31.25     37.50     43.75    50.00  \n",
+       "MaxBM  ClassA      5340.038  4327.675  2494.638    0.000  \n",
+       "       Class70RW  10163.225  8053.750  4611.975    0.000  \n",
+       "       Class70RT   7823.588  6260.425  3652.563    0.000  \n",
+       "MaxSF+ ClassA        99.676    43.520    13.056   -0.000  \n",
+       "       Class70RW    271.524   148.964    44.948   -0.000  \n",
+       "       Class70RT    229.390   142.590    54.390   -0.000  \n",
+       "MaxSF- ClassA      -244.966  -313.662  -383.466 -452.162  \n",
+       "       Class70RW   -458.476  -582.476  -708.476 -832.476  \n",
+       "       Class70RT   -404.810  -491.610  -579.810 -666.610  \n",
+       "MaxSF  ClassA       244.966   313.662   383.466  452.162  \n",
+       "       Class70RW    458.476   582.476   708.476  832.476  \n",
+       "       Class70RT    404.810   491.610   579.810  666.610  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "A = ['MaxBM', 'MaxSF+', 'MaxSF-']\n",
     "B = ['ClassA', 'Class70RW', 'Class70RT']\n",
     "\n",
-    "A = ['ClassA', 'Class70RW', 'Class70RT']\n",
-    "B = ['MaxBM', 'MaxSF+', 'MaxSF-']\n",
+    "# A = ['ClassA', 'Class70RW', 'Class70RT']\n",
+    "# B = ['MaxBM', 'MaxSF+', 'MaxSF-']\n",
     "\n",
     "iterables = [A, B]\n",
     "index = pd.MultiIndex.from_product(iterables)\n",
@@ -214,12 +431,12 @@
     "for i in [maxBMs, maxSFs_plus, maxSFs_minus]:\n",
     "    C.extend(i)\n",
     "\n",
-    "for i in range(len(loads)):\n",
-    "    for j in [maxBMs, maxSFs_plus, maxSFs_minus]:\n",
-    "        C.append(j[i])\n",
+    "# for i in range(len(loads)):\n",
+    "#     for j in [maxBMs, maxSFs_plus, maxSFs_minus]:\n",
+    "#         C.append(j[i])\n",
     "\n",
     "df = pd.DataFrame(C, index=index, columns=[span / 8 * i for i in range(9)])\n",
-    "print(df.loc[('ClassA', 'MaxSF-')])   ## you can navigate using loc, iloc\n",
+    "# print(df.loc[('ClassA', 'MaxSF-')])   ## you can navigate using loc, iloc\n",
     "\n",
     "new_row = df.loc['MaxSF+'].where(df.loc['MaxSF+'] > abs(df.loc['MaxSF-']), abs(df.loc['MaxSF-']))\n",
     "\n",
@@ -245,12 +462,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1])\n",
+    "# df = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1])\n",
     "\n",
-    "###get index names###\n",
-    "A = df.index.get_level_values(0).drop_duplicates().to_list()\n",
-    "B = df.index.get_level_values(1).drop_duplicates().to_list()\n",
-    "print(A, B)"
+    "# ###get index names###\n",
+    "# A = df.index.get_level_values(0).drop_duplicates().to_list()\n",
+    "# B = df.index.get_level_values(1).drop_duplicates().to_list()\n",
+    "# print(A, B)"
    ]
   },
   {
@@ -544,7 +761,7 @@
    "source": [
     "df1['TotalBM'] = totalBMs\n",
     "df1['TotalSF'] = totalSFs\n",
-
+    "df1"
    ]
   },
   {
@@ -1883,7 +2100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
